--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,11 @@
 <IfModule mod_rewrite.c>
 RewriteEngine On
+
+
+RewriteCond %{HTTP_HOST} !^$
+RewriteCond %{HTTP_HOST}  ^www.(.+)$ [NC]
+RewriteRule ^/(.*) http://%1/$1 [L,R=301]
+
 # !IMPORTANT! Set your RewriteBase here and don't forget trailing and leading
 # slashes.
 # If your page resides at
